[metadata]
name = mnextlib
summary = Extension library for Mininet
license = Apache License 2.0
author = Iwase Yusuke
home-page = https://github.com/iwaseyusuke/mnextlib
description-file = README.md
platform = any
classifier =
    Programming Language :: Python

[files]
packages =
    mnextlib
scripts =
    bin/mininet-enter
